[package]
name = "luno_sdk"
version = "0.1.1"
authors = ["jesse dunnink <dunninkjesse1@gmail.com>"]
edition = "2018"
description = "unofficial rust wrapper for the Luno API"
readme = "README.md"
repository = "https://github.com/jdunnink/luno_api_sdk"
license = "MIT"
license-file = "LICENSE"
keywords = ["luno", "api", "crypto", "bitcoin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
dotenv = "0.15.0"
async-trait = "0.1.33"
